# collection_literals

./: Cargo.toml  README.md
src/: lib.rs
tests/: btree.rs  collection.rs  hash.rs
