[package]
name = "collection_literals"
version = "1.0.0"
edition = "2021"
description = "Easy-to-use macroses for defining std::collections"
readme = "README.md"
repository = "https://github.com/vna2rexlnt/collection_literals"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[test]]
name = "collection"
path = "tests/collection.rs"

[[test]]
name = "hash"
path = "tests/hash.rs"

[[test]]
name = "btree"
path = "tests/btree.rs"


[dependencies]
